# bda-pi

./: .env.example  .gitignore  README.md  presentacion.html  presentacion.qmd  presentacion_borrador.html  requirements.txt
docs/: revision_parcial.txt
kafka/: 1_Producer.ipynb  1_producer.py  2_Consumidor.ipynb  2_consumidor.py  Kafka_Ingest.ipynb  README.md
notebooks/: BDA_ML.ipynb  BDA_ML_Spark_1.ipynb  BDA_ML_Spark_2.ipynb  BDA_ML_Spark_3_Kmeans.ipynb  BDA_ML_Spark_3_LDA.ipynb  EDA_MongoDB.ipynb  ML_MongoDB.ipynb  Medallion.ipynb
scraperRestaurants/: README.md  logging_utils.py  mapScraperX.py  orchestrator_peru.py  pyproject.toml
scraperRestaurants/config/: constant.py  get_dist.py
scraperRestaurants/crawler/: __init__.py  placesCrawlerV2.py
scraperRestaurants/scripts/legacy/: README.md  generate_queries.py
scraperRestaurants/tests/: test_etl.py  test_extractor_shape.py  test_reviews_column.py
scraperRestaurants/tests/fixtures/: tbm_map_minimal.json
scraperReviews/: README.md  googlemaps.py  logging_utils.py  monitor.py  orchestrator.py  pyproject.toml  requirements.txt  worker.py
scraperReviews/config/: scraper_config.py
scraperReviews/etl/: __init__.py  compress.py  dedup.py  optimize.py  pipeline.py  report.py
scraperReviews/tests/: test_date_parsing.py  test_etl_and_prefilter.py
scraperReviews/utils/: benchmark_workers.py  create_test_env.py  data_slicing.py
streamlit/: README.md  app.py  lib.py  requirements.txt
streamlit/.streamlit/: config.toml
