[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bda-mapscraper"
version = "1.1.0"
description = "Fase 1 BDA  pipeline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "BDA team" }]
dependencies = [
    "aiohttp>=3.9.0",
    "tqdm>=4.67.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24",
    "mypy>=1.10",
]

[project.scripts]
bda-mapscraper      = "mapScraperX:main"
bda-mapscraper-peru = "orchestrator_peru:main"
bda-mapscraper-etl  = "etl.pipeline:main"

[tool.setuptools]
py-modules = ["mapScraperX", "orchestrator_peru", "logging_utils"]
packages = ["crawler", "config", "etl"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["scripts/legacy", "data", "data_parquet", "data_test"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.black]
line-length = 100
target-version = ["py39"]
extend-exclude = "scripts/legacy|data|data_parquet|data_test"

[tool.mypy]
python_version = "3.9"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = ["scripts/legacy/", "data/", "data_parquet/", "data_test/"]
